adding the first features to this website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>Hello!</h1>
+<html>
+    
+    <head>
+        <title>Custom controllers and keyboards</title>
+    </head>
+
+    <h1>About us</h1>
+    <p>
+        We are a company who's goal is to let as many people as possible use computers,
+        that's why we decided to allow people to customise and personalise their own controllers.
+    </p>
+</html>
