some small changes to the website

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     
     <head>
-        <title>Custom controllers and keyboards</title>
+        <h1>Custom controllers and keyboards</h1>
     </head>
 
     <h1>About us</h1>
@@ -9,4 +9,7 @@
         We are a company who's goal is to let as many people as possible use computers,
         that's why we decided to allow people to customise and personalise their own controllers.
     </p>
+
+
+    
 </html>
