--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
     
     <head>
-        <h1>Custom controllers and keyboards</h1>
+        <title>Custom equipment</title>
     </head>
-
+    
+    <h1>Custom controllers and keyboards</h1>
     <h1>About us</h1>
     <p>
         We are a company who's goal is to let as many people as possible use computers,
